En edición de sandbox dejar el nombre sin cambio de apariencia al hover
Conflicts:
	app/assets/stylesheets/style.css.scss

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -921,3 +921,10 @@ form.new_user ul.list-inline {
   }
 }
 /*----datatable----*/
+.btnClose {
+  float: right;
+  margin-right: 8px;
+}
+#fileName:hover {
+  color: #FFFFFF;
+}
