Destacar link sandbox

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -895,3 +895,7 @@ background-color: #12181F;
 #fileName:hover {
   color: #FFFFFF;
 }
+table.link-color a {
+  color: #2c3e50;
+  text-decoration: underline;
+}
