--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -5,7 +5,7 @@
     <% end %>
 </div>
 
-<table class="table table-striped">
+<table class="table table-striped link-color">
   <thead>
     <tr>
       <th>id</th>
@@ -39,9 +39,15 @@
           <% end %>
         </td>
         <td>
+            <i class="fa fa-eye" title="View"></i>
+        </td>
+        <td>
           <%= link_to edit_sandbox_path(sandbox) do %>
             <i class="fa fa-cog" title="Edit Configuration"></i>
           <% end %>
+        </td>
+        <td>
+            <i class="fa fa-copy" title="Clone"></i>
         </td>
         <td>
           <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure you want to permanently delete this sandbox?' } do %>
@@ -64,7 +70,7 @@
 
 <h3 class="page-header">Public sandboxes</h3>
 
-<table class="table table-striped">
+<table class="table table-striped link-color">
   <thead>
     <tr>
       <th>id</th>
