Destacar link sandbox
Conflicts:
	app/assets/stylesheets/style.css.scss
	app/views/sandboxes/index.html.erb

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -928,3 +928,7 @@ form.new_user ul.list-inline {
 #fileName:hover {
   color: #FFFFFF;
 }
+table.link-color a {
+  color: #2c3e50;
+  text-decoration: underline;
+}
