--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           </ul>
           <ul class="nav navbar-right top-nav">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Bienvenido, <%= current_user.email %> <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Welcome, <%= current_user.email %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li>
                   <a href="/users/edit">My Account</a>
@@ -42,13 +42,7 @@
               Sign in <span class="caret"></span>
               </button>
                 <ul class="dropdown-menu" style="padding: 15px; right: 0; left: initial;" role="menu">
-                  <form method="post" action="/users/sign_in" accept-charset="UTF-8">
-                    <div style="display:none"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="ON2V8XPajVLj0IlToPxGL0jFmBhLA8U6ESrPk+AW0VQ="></div>
-                    <input style="margin-bottom: 15px;" type="email" placeholder="Email" id="user_email" name="user[email]"><br>
-                    <input style="margin-bottom: 15px;" type="password" placeholder="Password" id="user_password" name="user[password]">
-                    <p><input style="float: left; margin-right: 10px;" type="checkbox" name="user[remember_me]" id="user_remember_me" value="1">Remember me</p>
-                    <input class="btn btn-primary btn-block" type="submit" id="sign-in" value="Sign In">
-                  </form>
+                  <%= render 'layouts/signin' %>
                 </ul>
           </div>
       </div>
@@ -72,23 +66,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet.</p>
         </div>
         <div class="col-md-4 col-md-offset-2 bg-info mtb40">
-          <h3>Sign Up</h3>
-            <form accept-charset="UTF-8" action="/users" class="new_user mb20" id="new_user" method="post">
-            <div style="display:none"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="Tc8B3F9TrlzWOtz8rNY7eWmdxPrpqv9TqoDfVg2U4wc="></div>
-            <div class="form-group">
-              <label for="user_email">Email</label>
-              <input type="email" class="form-control" id="user_email" placeholder="Enter email" name="user[email]">
-            </div>
-            <div class="form-group">
-              <label for="user_password">Password <span>(8 characters minimum)</span></label>
-              <input type="password" class="form-control" id="user_password" placeholder="Password" autocomplete="off" name="user[password]">
-            </div>
-            <div class="form-group">
-              <label for="user_password_confirmation">Password Confirmation</label>
-              <input type="password" class="form-control" id="user_password_confirmation" placeholder="Password Confirmation" autocomplete="off" name="user[password_confirmation]">
-            </div>
-            <button type="submit" class="btn btn-default">Sign Up</button>
-          </form>
+          <%= render 'layouts/signup' %>
         </div>
       </div>
     </div>
@@ -102,7 +80,7 @@
         <div class="container mtb40">
           <div class="col-md-8">
             <h3 class="mb20">Developed by</h3>
-            <a href="http://www.unicef.org/" target="_blank" alt="UNICEF Website"><%= image_tag "UNICEF.png" %></a><a href="http://ciudadanointeligente.org/" target="_blank" alt="Fundación Ciudadano Inteligente Website"><%= image_tag "FCI.png" %></a> 
+            <a href="//www.unicef.org/" target="_blank" alt="UNICEF Website"><%= image_tag "UNICEF.png" %></a><a href="//ciudadanointeligente.org/" target="_blank" alt="Fundación Ciudadano Inteligente Website"><%= image_tag "FCI.png" %></a> 
           </div>
           <div class="col-md-4">
             <h3 class="mb20">Contact</h3>
