Changed bpmn alert classes

--- a/app/views/sandboxes/show.html.erb
+++ b/app/views/sandboxes/show.html.erb
@@ -2,7 +2,7 @@
 <% content_for :title do %>
 <%= @sandbox.name %>
 <% end %>
-<span class="alert"></span>
+<span class="alert-sandbox"></span>
    			<div id="paper-container" class="clearfix">
 				<div class="pull-left sidebar-left">
 					 <div id="stencil-container"></div>
