--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,13 +77,21 @@
               <% flash.each do |name, msg| %>
                 <%= content_tag :div, msg, class: 'error' if msg.is_a?(String) %>
               <% end %>
-              <div><%= f.label :email %><br />
-              <%= f.email_field :email %></div>
-              <div><%= f.label :password %><br />
-              <%= f.password_field :password %></div>
-              <div><%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation %></div>
-              <div><%= f.submit "Sign up" %></div>
+              <div class="form-group">
+                <%= f.label :email %>
+                <%= f.email_field :email, required: true, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :password %><br />
+                <%= f.password_field :password, required: true, class: "form-control" %>
+              </div>
+              <div class="form-group">
+                <%= f.label :password_confirmation %><br />
+                <%= f.password_field :password_confirmation, required: true, class: "form-control" %>
+              </div>
+              <div>
+                <%= f.submit "Sign up", class: "btn btn-success" %>
+              </div>
             <% end %>
             <%= render "devise/shared/links" %>
         </div>
