--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,3 +1,32 @@
+<% content_for :top do %>
+  <% if( !user_signed_in? ) %>
+    <div class="row banner">
+      <div class="container">
+        <div class="col-md-6 mtb40">
+          <h2>What is Sandbox?</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet.</p>
+        </div>
+        <div class="col-md-4 col-md-offset-2 bg-info mtb40">
+          <h3>Sign Up</h3>
+            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+              <% flash.each do |name, msg| %>
+                <%= content_tag :div, msg, class: name if msg.is_a?(String) %>
+              <% end %>
+              <div><%= f.label :email %><br />
+              <%= f.email_field :email %></div>
+              <div><%= f.label :password %><br />
+              <%= f.password_field :password %></div>
+              <div><%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation %></div>
+              <div><%= f.submit "Sign up" %></div>
+            <% end %>
+            <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
+<% end %>
+<% end %>
+
 <div class="row mb40">
 	<div class="col-md-12">
 		<h2 class="text-center">Explore the Features</h2>
