--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -761,7 +761,7 @@ background-color: #F55923;
   font-size: 60%;
 }
 
-.nav{
+header .nav{
 	float: left;
 	/*padding: 10px 0 0 20px;*/
   margin-left: 30px;
