--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -895,3 +895,7 @@ background-color: #12181F;
 .person-group ul {
     padding-left: 15px;
 }
+form.new_user ul.list-inline {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
