--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,10 +90,9 @@
                 <%= f.password_field :password_confirmation, required: true, class: "form-control" %>
               </div>
               <div>
-                <%= f.submit "Sign up", class: "btn btn-success" %>
+                <%= f.submit "Sign up", class: "btn btn-success" %> <%= render "devise/shared/links" %>
               </div>
             <% end %>
-            <%= render "devise/shared/links" %>
         </div>
       </div>
     </div>
