restore missing icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <% if( user_signed_in? ) %>
-          <a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
+          <a class="company-logo" href="/">Wizard</a><span class="tagline">beta</span>
           <ul class="nav navbar-nav">
-            <li><a href="#">Sandboxs</a></li>
+            <li><a href="/sandboxes">Sandboxs</a></li>
             <li><a href="#">Templates</a></li>
             <li><a href="#">Tutorials</a></li>
           </ul>
