--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -47,9 +47,15 @@
                 <% end %>
               </td>
               <td>
+                <i class="fa fa-eye" title="View"></i>
+              </td>
+              <td>
                 <%= link_to edit_sandbox_path(sandbox) do %>
                   <i class="fa fa-cog" title="Edit Configuration"></i>
                 <% end %>
+              </td>
+              <td>
+                <i class="fa fa-copy" title="Clone"></i>
               </td>
               <td>
                 <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure you want to permanently delete this sandbox?' } do %>
