--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -15,57 +15,54 @@
     <div role="tabpanel" class="tab-pane active" id="private">
       
 
-      <table class="table table-striped">
+      <table id="private_sandboxes" class="table table-striped">
         <thead>
           <tr>
             <th>id</th>
             <th>Name</th>
             <th>Description</th>
             <th>Last update</th>
-            <th colspan="4"></th>
+            <th>Public</th>
+            <th>Edit</th>
+            <th>Conf</th>
+            <th>Drop</th>
           </tr>
         </thead>
 
         <tbody>
           <% if( ! @sandboxes.blank? ) %>
-          <% @sandboxes.each do |sandbox| %>
-            <tr>
-              <td><%= sandbox.id %></td>
-              <td>
-                <%= link_to sandbox do %>
-                  <%= sandbox.name %>
-                <% end %>
-              </td>
-              <td><%= sandbox.description %></td>
-              <td><%= sandbox.updated_at %></td>
-              <td>
-                <% if(sandbox.public?) %>
-                  <i class="fa fa-globe" title="Public"></i>
-                <% end %>
-              </td>
-              <td>
-                <%= link_to sandbox do %>
-                  <i class="fa fa-edit" title="Edit"></i>
-                <% end %>
-              </td>
-              <td>
-                <%= link_to edit_sandbox_path(sandbox) do %>
-                  <i class="fa fa-cog" title="Edit Configuration"></i>
-                <% end %>
-              </td>
-              <td>
-                <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure you want to permanently delete this sandbox?' } do %>
-                  <i class="fa fa-trash" title="Delete"></i>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-          <% else %>
-            <tr>
-              <td colspan="8">
-                <p class="text-center">no records</p>
-              </td>
-            </tr>
+            <% @sandboxes.each do |sandbox| %>
+              <tr>
+                <td><%= sandbox.id %></td>
+                <td>
+                  <%= link_to sandbox do %>
+                    <%= sandbox.name %>
+                  <% end %>
+                </td>
+                <td><%= sandbox.description %></td>
+                <td><%= sandbox.updated_at %></td>
+                <td>
+                  <% if(sandbox.public?) %>
+                    <i class="fa fa-globe" title="Public"></i>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to sandbox do %>
+                    <i class="fa fa-edit" title="Edit"></i>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to edit_sandbox_path(sandbox) do %>
+                    <i class="fa fa-cog" title="Edit Configuration"></i>
+                  <% end %>
+                </td>
+                <td>
+                  <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure you want to permanently delete this sandbox?' } do %>
+                    <i class="fa fa-trash" title="Delete"></i>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
           <% end %>
         </tbody>
       </table>
@@ -79,7 +76,7 @@
     </div>
 
     <div role="tabpanel" class="tab-pane" id="public">
-      <table class="table table-striped">
+      <table id="public_sandboxes" class="table table-striped">
         <thead>
           <tr>
             <th>id</th>
@@ -91,27 +88,27 @@
 
         <tbody>
           <% if( ! @public_sandboxes.blank? ) %>
-          <% @public_sandboxes.each do |sandbox| %>
-            <tr>
-              <td><%= sandbox.id %></td>
-              <td>
-                <%= link_to sandbox do %>
-                  <%= sandbox.name %>
-                <% end %>
-              </td>
-              <td><%= sandbox.description %></td>
-              <td><%= sandbox.updated_at %></td>
-            </tr>
-          <% end %>
-          <% else %>
-            <tr>
-              <td colspan="8">
-                <p class="text-center">no records</p>
-              </td>
-            </tr>
+            <% @public_sandboxes.each do |sandbox| %>
+              <tr>
+                <td><%= sandbox.id %></td>
+                <td>
+                  <%= link_to sandbox do %>
+                    <%= sandbox.name %>
+                  <% end %>
+                </td>
+                <td><%= sandbox.description %></td>
+                <td><%= sandbox.updated_at %></td>
+              </tr>
+            <% end %>
           <% end %>
         </tbody>
       </table>
     </div>
   </div>
 </div>
+<script type="text/javascript">
+$(document).ready(function(){
+    $('#private_sandboxes').DataTable();
+    $('#public_sandboxes').DataTable();
+});
+</script>
