add clone functionality

--- a/app/views/sandboxes/_form.html.erb
+++ b/app/views/sandboxes/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-group">
     <%= f.input :name, placeholder: 'Enter a sandbox name', input_html: { class: 'form-control' } %>
     <%= f.input :description, placeholder: 'Enter a description', input_html: { class: 'form-control' } %>
-    <%= f.input :graph_data, placeholder: 'Enter your JSON data', input_html: { class: 'form-control' } %>    
+    <!-- <%= f.input :graph_data, placeholder: 'Enter your JSON data', input_html: { class: 'form-control' } %>  -->
 	  <div class="checkbox">
 	    <label>
 	    	<% checked = '' %>
