--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <% if( user_signed_in? ) %>
           <a class="company-logo" href="/">Wizard</a><span class="tagline">beta</span>
           <ul class="nav navbar-nav">
-            <li><a href="/sandboxes">Sandboxs</a></li>
+            <li><a href="/sandboxes">Sandboxes</a></li>
             <li><a href="#">Templates</a></li>
             <li><a href="#">Tutorials</a></li>
           </ul>
