--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,8 +3,8 @@
     <div class="row banner">
       <div class="container">
         <div class="col-md-6 mtb40">
-          <h2>What is Sandbox?</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis congue purus. Aenean pharetra arcu nibh, non aliquam leo laoreet sit amet.</p>
+          <h2>What is the Advocacy Wizard?</h2>
+          <p>It's a tool that will help your organization create a strategic plan for achieving your advocacy objectives. It provides a methodology for planning, and specific tools for facilitating each of the planning steps.</p>
         </div>
         <div class="col-md-4 col-md-offset-2 bg-info mtb40">
           <h3>Sign Up</h3>
