--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -21,12 +21,10 @@
             <th>id</th>
             <th>Name</th>
             <th>Description</th>
-            <th>Last update</th>
+            
             <th>Public</th>
-            <th>Edit</th>
-            <th>Conf</th>
-            <th>Clone</th>
-            <th>Drop</th>
+            <th>Last update</th>
+            <th>Actions</th>
           </tr>
         </thead>
 
@@ -41,28 +39,23 @@
                   <% end %>
                 </td>
                 <td><%= sandbox.description %></td>
-                <td><%= sandbox.updated_at %></td>
+                
                 <td>
                   <% if(sandbox.public?) %>
                     <i class="fa fa-globe" title="Public"></i>
                   <% end %>
                 </td>
+                <td><%= sandbox.updated_at %></td>
                 <td>
                   <%= link_to sandbox do %>
                     <i class="fa fa-edit" title="Edit"></i>
                   <% end %>
-                </td>
-                <td>
                   <%= link_to edit_sandbox_path(sandbox) do %>
                     <i class="fa fa-cog" title="Edit Configuration"></i>
                   <% end %>
-                </td>
-                <td>
                   <%= link_to clone_sandbox_path(sandbox) do %>
                     <i class="fa fa-copy" title="Clone"></i>
                   <% end %>
-                </td>
-                <td>
                   <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure you want to permanently delete this sandbox?' } do %>
                     <i class="fa fa-trash" title="Delete"></i>
                   <% end %>
