hability to export to json

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <%# navigation styled for Bootstrap 3.0 %>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-	<a class="company-logo" href="/sandboxes">Vizard</a><span class="tagline">beta</span>
+	<a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
 	<!-- Top Menu Items -->
     <% if( user_signed_in? ) %>
     <ul class="nav navbar-right top-nav" data-step="3" data-intro="This is the user navigation menu">
