--- a/app/views/layouts/sandboxes.html.erb
+++ b/app/views/layouts/sandboxes.html.erb
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title><%= content_for?(:title) ? yield(:title) + " - " : "" %>Vizard</title>
-    <!-- <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Vizard Rails" %>"> -->
+    <title><%= content_for?(:title) ? yield(:title) + " - " : "" %>Wizard</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'sandboxes', 'data-turbolinks-track' => true %>
 
