cambio ico home

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -39,9 +39,9 @@
               <td>2015-03-05 13:02:30 UTC</td>
                 <td>
                     <i class="fa fa-edit" title="Edit"></i>
+                    <i class="fa fa-home" title="Vist Home"></i>
                     <i class="fa fa-cog" title="Edit Configuration"></i>
                     <i class="fa fa-copy" title="Clone"></i>
-                    <i class="fa fa-download" title="Export to JSON"></i>
                     <i class="fa fa-trash" title="Delete"></i>
                 </td>
               </tr>
