--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -23,26 +23,26 @@
             <th>Name</th>
             <th>Description</th>
             
-            <th>Public</th>
+            <th class="text-center">Public</th>
             <th>Last update</th>
-            <th>Actions</th>
+            <th class="text-right">Actions</th>
           </tr>
         </thead>
         <tbody>
             <tr>
               <td>1</td>
-              <td>Project 1</td>
+              <td><a href="#">Project 1</a></td>
               <td>Hard project</td>
-              <td>
+              <td class="text-center">
               	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
-                <td>
-                    <i class="fa fa-edit" title="Edit"></i>
-                    <i class="fa fa-home" title="Vist Home"></i>
-                    <i class="fa fa-cog" title="Edit Configuration"></i>
-                    <i class="fa fa-copy" title="Clone"></i>
-                    <i class="fa fa-trash" title="Delete"></i>
+                <td class="text-right">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
                 </td>
               </tr>
         </tbody>
@@ -62,7 +62,7 @@
         <tbody>
               <tr>
                 <td>1</td>
-                <td>Project 1</td>
+                <td><a href="#">Project 1</a></td>
                 <td>Prety Project</td>
                 <td>2015-03-05 13:02:30 UTC</td>
               </tr>
