separación icos actions y padding separador de footer

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -37,7 +37,7 @@
               	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
-                <td class="text-right">
+                <td class="text-right actions">
                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
                     <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
                     <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
