--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,7 +16,7 @@
 
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="private">
-      <table id="private_projects" class="table table-striped">
+      <table id="private_projects" class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>id</th>
@@ -45,12 +45,124 @@
                     <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
                 </td>
               </tr>
+              <tr>
+              <td>2</td>
+              <td><a href="#">Project 2</a></td>
+              <td>Hard project</td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
+              <td>2015-03-05 13:02:30 UTC</td>
+                <td class="text-right actions">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
+              <tr>
+              <td>3</td>
+              <td><a href="#">Project 3</a></td>
+              <td>Hard project</td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
+              <td>2015-03-05 13:02:30 UTC</td>
+                <td class="text-right actions">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
+              <tr>
+              <td>4</td>
+              <td><a href="#">Project 4</a></td>
+              <td>Hard project</td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
+              <td>2015-03-05 13:02:30 UTC</td>
+                <td class="text-right actions">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
+              <tr>
+              <td>5</td>
+              <td><a href="#">Project 6</a></td>
+              <td>Hard project</td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
+              <td>2015-03-05 13:02:30 UTC</td>
+                <td class="text-right actions">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
+              <tr>
+              <td>7</td>
+              <td><a href="#">Project 8</a></td>
+              <td>Hard project</td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
+              <td>2015-03-05 13:02:30 UTC</td>
+                <td class="text-right actions">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
+              <tr>
+              <td>9</td>
+              <td><a href="#">Project 9</a></td>
+              <td>Hard project</td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
+              <td>2015-03-05 13:02:30 UTC</td>
+                <td class="text-right actions">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
+              <tr>
+              <td>10</td>
+              <td><a href="#">Project 10</a></td>
+              <td>Hard project</td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
+              <td>2015-03-05 13:02:30 UTC</td>
+                <td class="text-right actions">
+                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
+                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
+                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
+                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
+                </td>
+              </tr>
         </tbody>
       </table>
     </div>
 
     <div role="tabpanel" class="tab-pane" id="public">
-      <table id="public_projects" class="table table-striped">
+      <table id="public_projects" class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>id</th>
@@ -73,7 +185,13 @@
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
-    $('#private_projects').DataTable();
-    $('#public_projects').DataTable();
+    $('#private_projects').DataTable({
+        "dom": '<"toolbar">frtip',
+        "pagingType": "simple_numbers"
+    } );
+    $('#public_projects').DataTable({
+        "dom": '<"toolbar">frtip'
+    } );
 });
+
 </script>
