--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -24,60 +24,14 @@
             <th>id</th>
             <th>Name</th>
             <th>Description</th>
-            
-            <th>Public</th>
             <th>Last update</th>
-            <th>Actions</th>
+            <th class="text-center">Public</th>
+            <th class="text-right">Actions</th>
           </tr>
         </thead>
 
         <tbody>
           <% if( ! @sandboxes.blank? ) %>
-          <% @sandboxes.each do |sandbox| %>
-            <tr>
-              <td><%= sandbox.id %></td>
-              <td>
-                <%= link_to sandbox do %>
-                  <%= sandbox.name %>
-                <% end %>
-              </td>
-              <td><%= sandbox.description %></td>
-              <td><%= sandbox.updated_at %></td>
-              <td>
-                <% if(sandbox.public?) %>
-                  <i class="fa fa-globe" title="Public"></i>
-                <% end %>
-              </td>
-              <td>
-                <%= link_to sandbox do %>
-                  <i class="fa fa-edit" title="Edit"></i>
-                <% end %>
-              </td>
-              <td>
-                <i class="fa fa-eye" title="View"></i>
-              </td>
-              <td>
-                <%= link_to edit_sandbox_path(sandbox) do %>
-                  <i class="fa fa-cog" title="Edit Configuration"></i>
-                <% end %>
-              </td>
-              <td>
-                <i class="fa fa-copy" title="Clone"></i>
-              </td>
-              <td>
-                <%= link_to sandbox, method: :delete, data: { confirm: 'Are you sure you want to permanently delete this sandbox?' } do %>
-                  <i class="fa fa-trash" title="Delete"></i>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-          <% else %>
-            <tr>
-              <td colspan="8">
-                <p class="text-center">no records</p>
-              </td>
-            </tr>
-=======
             <% @sandboxes.each do |sandbox| %>
               <tr>
                 <td><%= sandbox.id %></td>
@@ -87,14 +41,13 @@
                   <% end %>
                 </td>
                 <td><%= sandbox.description %></td>
-                
-                <td>
+                <td><%= sandbox.updated_at %></td>
+                <td class="text-center">
                   <% if(sandbox.public?) %>
                     <i class="fa fa-globe" title="Public"></i>
                   <% end %>
                 </td>
-                <td><%= sandbox.updated_at %></td>
-                <td>
+                <td class="text-right actions">
                   <%= link_to sandbox do %>
                     <i class="fa fa-edit" title="Edit"></i>
                   <% end %>
@@ -113,7 +66,6 @@
                 </td>
               </tr>
             <% end %>
->>>>>>> dev
           <% end %>
         </tbody>
       </table>
