--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -984,4 +984,20 @@ form.new_user ul.list-inline {
 .dataTables_info {
   display: inline-block;
 }
+table.dataTable thead .sorting_asc,
+table.dataTable thead .sorting_desc,
+table.dataTable thead .sorting {
+  cursor: pointer;
+  *cursor: hand;
+}
+table.dataTable thead .sorting {
+  background: image-url("sort_both.png") no-repeat center right;
+}
+table.dataTable thead .sorting_asc {
+  background: image-url("sort_asc.png") no-repeat center right;
+}
+table.dataTable thead .sorting_desc {
+  background: image-url("sort_desc.png") no-repeat center right;
+}
+
 /*----datatable----*/
