--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,7 +25,7 @@
             
             <th class="text-center">Public</th>
             <th>Last update</th>
-            <th class="text-right">Actions</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
