arregló estilo tabla en sandboxes

--- a/app/views/sandboxes/index.html.erb
+++ b/app/views/sandboxes/index.html.erb
@@ -105,7 +105,13 @@
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
-    $('#private_sandboxes').DataTable();
-    $('#public_sandboxes').DataTable();
+    $('#private_sandboxes').DataTable({
+        "dom": '<"toolbar">frtip',
+        "pagingType": "simple_numbers"
+    } );
+    $('#public_sandboxes').DataTable({
+        "dom": '<"toolbar">frtip'
+    } );
 });
+
 </script>
