--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -971,8 +971,8 @@ form.new_user ul.list-inline {
   border-radius: 4px;
 }
 .paging_simple_numbers>a, .paging_simple_numbers>span {
-  position: relative;
-  float: left;
+  /*position: relative;
+  float: left;*/
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
@@ -981,9 +981,9 @@ form.new_user ul.list-inline {
   background-color: #fff;
   border: 1px solid #ddd;
 }
-.dataTables_info {
+/*.dataTables_info {
   display: inline-block;
-}
+}*/
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc,
 table.dataTable thead .sorting {
