--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,18 +1,30 @@
-<h3>Project</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, turpis ac efficitur consequat, erat neque mattis mauris, eget vulputate ex risus vel metus. Phasellus tincidunt at massa sed vehicula. Donec semper vel est eget auctor. Mauris a aliquet felis. Pellentesque eget ultricies mi. Phasellus accumsan neque vel odio interdum sodales.</p>
+<h3>Project 1</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, turpis ac efficitur consequat, erat neque mattis mauris, eget vulputate ex risus vel metus. Phasellus tincidunt at massa sed vehicula. Donec semper vel est eget auctor. Mauris a aliquet felis. Pellentesque eget ultricies mi. Phasellus accumsan neque vel odio interdum sodales. <a href="">+ Read More</a></p>
 
-<div class="addNew">
-             <a href="#" class="btn btn-default"><i class="fa fa-plus-square-o"></i> New Resources</a>
-      </div>
+<div class="addNew dropdown">
+	<a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" class="btn btn-default">
+    <i class="fa fa-plus-square-o"></i> New Resources
+    <span class="caret"></span>
+  </a>
+
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+    <li>
+    	<a role="menuitem" tabindex="-1" href="#">Sandbox</a>
+    </li>
+    <li>
+    	<a role="menuitem" tabindex="-1" href="#">Other Resouce</a>
+    </li>
+  </ul>
+</div>
+<div class="clearfix"></div>
       <table id="resources" class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>id</th>
             <th>Name</th>
             <th>Description</th>
-            
-            <th class="text-center">Public</th>
             <th>Tags</th>
+            <th class="text-center">Public</th>
             <th>Last update</th>
             <th>Actions</th>
           </tr>
@@ -20,15 +32,15 @@
         <tbody>
             <tr>
               <td>1</td>
-              <td><a href="#">Project 1</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 1</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
+              </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
@@ -41,15 +53,15 @@
               </tr>
               <tr>
               <td>2</td>
-              <td><a href="#">Project 2</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 2</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
+              </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
@@ -62,15 +74,15 @@
               </tr>
               <tr>
               <td>3</td>
-              <td><a href="#">Project 3</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 3</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
+              </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
@@ -83,15 +95,15 @@
               </tr>
               <tr>
               <td>4</td>
-              <td><a href="#">Project 4</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 4</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
+              </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
@@ -104,15 +116,15 @@
               </tr>
               <tr>
               <td>5</td>
-              <td><a href="#">Project 6</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 6</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
+              </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
@@ -125,15 +137,15 @@
               </tr>
               <tr>
               <td>7</td>
-              <td><a href="#">Project 8</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 8</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
+              </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
@@ -146,15 +158,15 @@
               </tr>
               <tr>
               <td>9</td>
-              <td><a href="#">Project 9</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 9</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
+              </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
               </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
@@ -167,19 +179,20 @@
               </tr>
               <tr>
               <td>10</td>
-              <td><a href="#">Project 10</a></td>
-              <td>Hard project</td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td class="tags">
+              <td><a href="#">Resource 10</a></td>
+              <td>Great Resource</td>
+               <td class="tags">
                 <a href="">tag1</a>
                 <a href="">tag2</a>
                 <a href="">tag3</a>
               </td>
+              <td class="text-center">
+              	<i class="fa fa-globe" title="Public"></i>
+              </td>
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
+                   <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
                     <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
                     <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
                     <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
