Ajuste de icos por tipo de archivo

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -32,7 +32,7 @@
         <tbody>
             <tr>
               <td>1</td>
-              <td><a href="#">Resource 1</a></td>
+              <td><a href="#">Trello Name</a></td>
               <td>Great Resource</td>
                <td class="tags">
                 <a href="">tag1</a>
@@ -45,15 +45,12 @@
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
                     <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
                 </td>
               </tr>
               <tr>
               <td>2</td>
-              <td><a href="#">Resource 2</a></td>
+              <td><a href="#">Document Name</a></td>
               <td>Great Resource</td>
                <td class="tags">
                 <a href="">tag1</a>
@@ -66,137 +63,256 @@
               <td>2015-03-05 13:02:30 UTC</td>
                 <td class="text-right actions">
                    <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
                     <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
                 </td>
               </tr>
               <tr>
-              <td>3</td>
-              <td><a href="#">Resource 3</a></td>
-              <td>Great Resource</td>
-               <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
-              </td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td>2015-03-05 13:02:30 UTC</td>
-                <td class="text-right actions">
-                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
-                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                </td>
+	              <td>3</td>
+	              <td><a href="#">Sandbox 3</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
               </tr>
               <tr>
-              <td>4</td>
-              <td><a href="#">Resource 4</a></td>
-              <td>Great Resource</td>
-               <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
-              </td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td>2015-03-05 13:02:30 UTC</td>
-                <td class="text-right actions">
-                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
-                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                </td>
+	              <td>4</td>
+	              <td><a href="#">Sandbox 4</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
               </tr>
               <tr>
-              <td>5</td>
-              <td><a href="#">Resource 6</a></td>
-              <td>Great Resource</td>
-               <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
-              </td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td>2015-03-05 13:02:30 UTC</td>
-                <td class="text-right actions">
-                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
-                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                </td>
+	              <td>5</td>
+	              <td><a href="#">Sandbox 5</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
               </tr>
               <tr>
-              <td>7</td>
-              <td><a href="#">Resource 8</a></td>
-              <td>Great Resource</td>
-               <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
-              </td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td>2015-03-05 13:02:30 UTC</td>
-                <td class="text-right actions">
-                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
-                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                </td>
+	              <td>6</td>
+	              <td><a href="#">Sandbox 6</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
               </tr>
               <tr>
-              <td>9</td>
-              <td><a href="#">Resource 9</a></td>
-              <td>Great Resource</td>
-               <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
-              </td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td>2015-03-05 13:02:30 UTC</td>
-                <td class="text-right actions">
-                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                    <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
-                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                </td>
+	              <td>7</td>
+	              <td><a href="#">Sandbox 7</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
               </tr>
               <tr>
-              <td>10</td>
-              <td><a href="#">Resource 10</a></td>
-              <td>Great Resource</td>
-               <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
-              </td>
-              <td class="text-center">
-              	<i class="fa fa-globe" title="Public"></i>
-              </td>
-              <td>2015-03-05 13:02:30 UTC</td>
-                <td class="text-right actions">
-                   <a href="#"><i class="fa fa-edit" title="Edit"></i></a>
-                   <a href="#"><i class="fa fa-home" title="Vist Home"></i></a>
-                    <a href="#"><i class="fa fa-cog" title="Edit Configuration"></i></a>
-                    <a href="#"><i class="fa fa-copy" title="Clone"></i></a>
-                    <a href="#"><i class="fa fa-trash" title="Delete"></i></a>
-                </td>
+	              <td>8</td>
+	              <td><a href="#">Sandbox 8</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
+              </tr>
+              <tr>
+	              <td>9</td>
+	              <td><a href="#">Sandbox 9</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
+              </tr>
+              <tr>
+	              <td>10</td>
+	              <td><a href="#">Sandbox 10</a></td>
+	              <td>Great Resource</td>
+	               <td class="tags">
+	                <a href="">tag1</a>
+	                <a href="">tag2</a>
+	                <a href="">tag3</a>
+	              </td>
+	              <td class="text-center">
+	              	<i class="fa fa-globe" title="Public"></i>
+	              </td>
+	              <td>2015-03-05 13:02:30 UTC</td>
+	              <td class="text-right actions">
+						<a href="#">
+					    	<i class="fa fa-edit" title="Edit"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-cog" title="Edit Configuration"></i>
+						</a>                  
+						<a href="#">
+					        <i class="fa fa-copy" title="Clone"></i>
+					    </a>
+					    <a href="#">
+					        <i class="fa fa-download" title="Export to JSON"></i>
+					    </a>                  
+					    <a data-confirm="Are you sure you want to permanently delete this sandbox?" data-method="delete" href="#" rel="nofollow">
+					        <i class="fa fa-trash" title="Delete"></i>
+						</a>                
+					</td>
               </tr>
         </tbody>
       </table>
