link new resource > sandbox

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -3,13 +3,13 @@
 
 <div class="addNew dropdown">
 	<a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" class="btn btn-default">
-    <i class="fa fa-plus-square-o"></i> New Resources
+    <i class="fa fa-plus-square-o"></i> New Resource
     <span class="caret"></span>
   </a>
 
   <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
     <li>
-    	<a role="menuitem" tabindex="-1" href="#">Sandbox</a>
+    	<a role="menuitem" tabindex="-1" href="/sandboxes/new">Sandbox</a>
     </li>
     <li>
     	<a role="menuitem" tabindex="-1" href="#">Other Resouce</a>
