--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -35,9 +35,9 @@
               <td><a href="#">Trello Name</a></td>
               <td>Great Resource</td>
                <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
+                <span class="label label-default">Tag1</span>
+                <span class="label label-default">Tag1</span>
+                <span class="label label-default">Tag1</span>
               </td>
               <td class="text-center">
               	<i class="fa fa-globe" title="Public"></i>
@@ -53,9 +53,9 @@
               <td><a href="#">Document Name</a></td>
               <td>Great Resource</td>
                <td class="tags">
-                <a href="">tag1</a>
-                <a href="">tag2</a>
-                <a href="">tag3</a>
+                <span class="label label-default">Tag1</span>
+                <span class="label label-default">Tag1</span>
+                <span class="label label-default">Tag1</span>
               </td>
               <td class="text-center">
               	<i class="fa fa-globe" title="Public"></i>
@@ -71,9 +71,9 @@
 	              <td><a href="#">Sandbox 3</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+	                <span class="label label-default">Tag1</span>
+                	<span class="label label-default">Tag1</span>
+                	<span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
@@ -102,9 +102,9 @@
 	              <td><a href="#">Sandbox 4</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
@@ -133,9 +133,9 @@
 	              <td><a href="#">Sandbox 5</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
@@ -164,9 +164,9 @@
 	              <td><a href="#">Sandbox 6</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+		            <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
@@ -195,9 +195,9 @@
 	              <td><a href="#">Sandbox 7</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
@@ -226,9 +226,9 @@
 	              <td><a href="#">Sandbox 8</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
@@ -257,9 +257,9 @@
 	              <td><a href="#">Sandbox 9</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
@@ -288,9 +288,9 @@
 	              <td><a href="#">Sandbox 10</a></td>
 	              <td>Great Resource</td>
 	               <td class="tags">
-	                <a href="">tag1</a>
-	                <a href="">tag2</a>
-	                <a href="">tag3</a>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
+	                <span class="label label-default">Tag1</span>
 	              </td>
 	              <td class="text-center">
 	              	<i class="fa fa-globe" title="Public"></i>
