new resource page

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1003,3 +1003,9 @@ table.dataTable thead .sorting_desc {
 .clearfix {
   clear: both;
 }
+.tags-group {
+  margin: 40px 0;
+}
+.tags-group .tags {
+  margin: 20px 0;
+}
